<resources>
    <string name="app_name">JSantase-AndroidV3</string>

    <string name="start_new_game">Start new game</string>
    
    <string name="default_status">Please select menu options</string>
    
    <string name="view_game_log">View game log</string>
    
    <string name="name_player1">Name of Player 1:</string>
    <string name="hint_player1">Name Player1</string>
    <string name="name_player2">Name of Player 2:</string>
    <string name="hint_player2">Name Player2</string>
    <string name="raising">
        Raising with a card of the same suit after the game is closed or the deck is empty
    </string>
    
    <string name="settings">Settings</string>
    <string name="about">About</string>
    
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    
    <string name="description">An implementation of the popular card game \'Sixty-six\'(\'Shnapsen\')</string>
    <string name="copyright">Copyright © 2014 Ivailo Georgiev</string>
</resources>
