<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
<ImageView android:id="@+id/imgJSantase"
    android:src="@drawable/jsantase"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true" />

<TextView android:id="@+id/tvAppName"
    android:text="@string/app_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/imgJSantase"
    android:textSize="24sp" />

<TextView android:id="@+id/tvDescription"
    android:text="@string/description"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/tvAppName"
    android:textSize="12sp" />

<TextView android:id="@+id/tvCopyright"
    android:text="@string/copyright"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/tvDescription"
    android:textSize="18sp" />

<Button android:id="@+id/btnOK"
    android:text="@android:string/ok"
    android:width="100dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/tvCopyright"
    android:layout_centerHorizontal="true" />

</RelativeLayout>
